<resources>
    <string name="app_name">Resume On Phone</string>
    <string name="resume_builder">Resume Builder</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="objective">Objective</string>
    <string name="work_experience">Work Experience</string>
    <string name="college">College</string>
    <string name="degree">Degree</string>
    <string name="GPA">GPA</string>
    <string name="graduation_date">Graduation Date</string>
    <string name="submit">Submit</string>
</resources>
